fix: [CDS-44142]: truncate long dropdown option text while displaying listener rules (#11631)
* fix: address review comments from prev PR
* fix: dropdown option style issue by ellipsing long text and on hover tooltip gets displayed from internal component itself

--- a/src/modules/75-cd/components/PipelineSteps/ECSBlueGreenCreateServiceStep/ECSBlueGreenCreateServiceStep.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/ECSBlueGreenCreateServiceStep/ECSBlueGreenCreateServiceStep.module.scss
@@ -17,3 +17,7 @@
   align-items: flex-end;
   margin: 12px 0;
 }
+
+.dropdownMenu {
+  width: 55%;
+}
